Fix Coverage Report